--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "4.4.5",
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
+    "react-sidebar": "2.2.1",
     "redux": "3.5.2",
     "redux-thunk": "2.1.0",
     "stardust": "0.38.1"
@@ -76,6 +77,7 @@
     "postcss-loader": "0.11.0",
     "prompt": "1.0.0",
     "react-addons-test-utils": "15.3.1",
+    "react-sidenav": "1.0.4",
     "redux-immutable-state-invariant": "1.2.3",
     "replace": "0.3.0",
     "rimraf": "2.5.4",
