--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "postcss-loader": "0.11.0",
     "prompt": "1.0.0",
     "react-addons-test-utils": "15.3.1",
+    "react-hot-loader": "3.0.0-beta.3",
     "react-sidenav": "1.0.4",
     "redux-immutable-state-invariant": "1.2.3",
     "replace": "0.3.0",
@@ -85,9 +86,12 @@
     "sinon": "1.17.5",
     "sinon-chai": "2.8.0",
     "style-loader": "0.13.1",
+    "tape": "4.6.0",
+    "testem": "1.11.0",
     "url-loader": "0.5.7",
     "webpack": "1.13.2",
     "webpack-dev-middleware": "1.6.1",
+    "webpack-dev-server": "1.15.1",
     "webpack-hot-middleware": "2.12.2",
     "webpack-md5-hash": "0.0.5"
   },
