--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "J David",
   "license": "MIT",
   "dependencies": {
+    "extend-tape": "1.2.0",
     "object-assign": "4.1.0",
     "react": "15.3.1",
     "react-dom": "15.3.1",
@@ -35,6 +36,7 @@
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
     "react-sidebar": "2.2.1",
+    "react-unit": "2.0.0",
     "redux": "3.5.2",
     "redux-thunk": "2.1.0",
     "stardust": "0.38.1"
